# SpecfemUtils.jl

./: .gitignore  Manifest.toml  Project.toml  main.jl
docs/: make.jl
docs/src/: index.md
lib/: Manifest.toml  build_tarballs.jl
lib/src/: CMakeLists.txt  shared_par.f90
scripts/: SpecfemCheckMpi.jl  SpecfemDebugScript.jl  SpecfemMeshInterp.jl  SpecfemMeshInterpreter.jl  debugScript.jl  meshInterpreter.jl
src/: SpecfemMeshInterpreter.jl  SpecfemUtils.jl  argparse.jl  interp.jl  readfiles.jl  types.jl  utils.jl
src/dev/meshConvert/: argParse.jl  interp.jl  meshConvert.jl  types.jl
src/meshInterp/: argParse.jl  interp.jl  meshInterp.jl  types.jl
src/meshInterpreter/: argparse.jl  constants.jl  interp.jl  meshInterpreter.jl  types.jl  utils.jl
src/shared/: constants.jl  kdtree.jl  readfiles.jl  types.jl
